changes weren't committed for some reason

--- a/src/less/library.less
+++ b/src/less/library.less
@@ -29,6 +29,7 @@ body{
     top: 0px;
     bottom: 0px;
     left: 0px;
+    background-color: var(--eng-color);
     /*box-shadow: 1px 0px 5px black;*/
     z-index: 20;
     overflow: auto;
