--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,25 +24,83 @@ body {
 	    z-index: 20;
 	    display: inline-block;
 	    position: absolute;
-	    top: 44px;
+	    top: @titlebar-height;
 	    left: 200px;
 	    right: 0px;
 	    bottom: 0px;
-		/*
-		width: 100%;
-		height: 100%;
-		margin-left: 200px;
-		padding-right: 200px;
-		margin-top: @titlebar-height;
-	    padding-bottom: @titlebar-height;
-	    box-sizing: border-box;
-		z-index: @ide-z-back;
-
-		display: inline-block;
-		*/
+		background: rgba(255,255,255,0.8);
 	}
 }
 
 ::selection {
-  background: @ide-fave-color-200;
+  	background: var(--eng-color);
+}
+
+body {
+	&.not-ready .load-splash {
+		opacity: 1;
+	}
+
+	&:not(.not-ready) .load-splash {
+		opacity: 0;
+		pointer-events: none;
+	}
+}
+
+.load-splash {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	z-index: 1000;
+	background-color: white;
+
+	transition: all 0.5s ease-in-out;
+
+	>.draggable {
+		.win-drag();
+
+		margin: 3px;
+	    position: absolute;
+	    top: 0px;
+	    right: 0px;
+	    left: 0px;
+	    bottom: 0px;
+	}
+
+	div.circle1, div.circle2 {
+		position: absolute;
+	    border-radius: 100%;
+		background-color: white;
+	    
+	    animation-name: loading1;
+	    animation-iteration-count: infinite;
+	    animation-duration: 3s;
+	    animation-timing-function: ease-in-out;
+	}
+	div.circle1 {  
+	    background-image: url("less/splash.png");
+	    background-position: center center;
+	    clip-path: circle(100% at 50% 50%);
+	}
+
+	div.circle2 {
+		animation-delay: 0.075s;	
+	}
+
+	@keyframes loading1 {
+	    from {
+	    	width: 0%;
+	       	height: 0%;
+	        top: 50%;
+	        left: 50%;
+	    }
+	    to {
+	    	width: 200%;
+	        height: 200%;
+	        top: -50%;
+	        left: -50%;
+	    }
+	}
 }
