added luasocket http.get

--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -21,8 +21,8 @@
     left: 0px;
     right: 0px;
     z-index: @ide-z-front;
-    background: var(--eng-color);
     white-space: nowrap;
+    background-color: white;
 
     .categories {
     	position: relative;
