--- a/src/less/main.less
+++ b/src/less/main.less
@@ -5,17 +5,27 @@
 @import "ui";
 @import "console";
 
-html {
+html, body {
+	margin: 0;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+}
+
+html {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
 	-webkit-font-smoothing: none;
 }
 
+::selection {
+  	background: var(--eng-color);
+}
+
 body {
-	margin: 0px;
-	width: 100%;
-	height: 100%;
 
 	display: inline-block;
 
@@ -28,20 +38,18 @@ body {
 	    left: 200px;
 	    right: 0px;
 	    bottom: 0px;
-		background: rgba(255,255,255,0.8);
+		background: rgba(255,255,255,0.5);
 	}
-}
 
-::selection {
-  	background: var(--eng-color);
-}
-
-body {
 	&.not-ready .load-splash {
 		opacity: 1;
 	}
 
 	&:not(.not-ready) .load-splash {
+		>.draggable {
+			.win-nodrag();
+		}
+
 		opacity: 0;
 		pointer-events: none;
 	}
