--- a/src/modules/image/less/main.less
+++ b/src/modules/image/less/main.less
@@ -26,6 +26,8 @@
 			height: 100%;
     		vertical-align: top;
     		overflow: auto;
+    		background-image: url('modules/image/grid.png');
+    		background-repeat: repeat;
 
   			.preview {
   				.no-select();
@@ -36,6 +38,7 @@
 			    transform: translate(-50%, -50%);
 			    transition: all ease-in-out 0.2s;
 			    image-rendering: pixelated;
+			    outline: 2px dashed var(--eng-color);
   			}
 
   			#zoom-controls {
