--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -1,5 +1,13 @@
 @import "imports";
 
+/* parent must be relative */
+.centered {
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .ui-dialog-container {
     margin-left: 200px;
     position: absolute;
