--- a/src/modules/spritesheet/less/main.less
+++ b/src/modules/spritesheet/less/main.less
@@ -18,14 +18,11 @@
 }
 */
 body .workspace.spritesheet {
-    width: 100%;
-
     .preview-container {
         .no-select();
 
         width: 100%;
         height: 50%;
-        padding: 0px 10px;
 
         >* {
             display: inline-block;
@@ -37,6 +34,10 @@ body .workspace.spritesheet {
 
         .img-preview-container {
             position: relative;
+			
+			>* {
+				.centered();
+			}
         }
 
         .frame-box-container {
@@ -55,6 +56,14 @@ body .workspace.spritesheet {
                 height: 1px;
             }
         }
+		
+		>#main-canvas {
+			position: relative;
+			
+			>canvas {
+				.centered();
+			}
+		}
     }
 
     .inputs-section {
