--- a/src/modules/spritesheet/less/main.less
+++ b/src/modules/spritesheet/less/main.less
@@ -17,12 +17,14 @@
     padding: 10px;
 }
 */
-body .workspace.spritesheet {
+.workspace.spritesheet {
     .preview-container {
         .no-select();
 
         width: 100%;
         height: 50%;
+        background-image: url('modules/image/grid.png');
+        background-repeat: repeat;
 
         >* {
             display: inline-block;
@@ -42,16 +44,13 @@ body .workspace.spritesheet {
 
         .frame-box-container {
             outline: 1px solid gray;
-            position: absolute;
-            top: 1px;
-            left: 1px;
             font-size: 0;
 
             z-index: 20;
 
             .frame-box {
                 display: inline-block;
-                outline: solid 1px red;
+                outline: solid 1px var(--eng-color);
                 width: 1px;
                 height: 1px;
             }
@@ -62,6 +61,8 @@ body .workspace.spritesheet {
 			
 			>canvas {
 				.centered();
+
+                outline: 2px dashed var(--eng-color);
 			}
 		}
     }
