large ui changes

--- a/src/less/library.less
+++ b/src/less/library.less
@@ -5,8 +5,6 @@
 @lib-svg-height: 14px;
 
 body{
-	background-color: var(--eng-color);
-
 	&[project-open="0"] {
 		.library {
 			width: 0px;
@@ -29,8 +27,7 @@ body{
     top: 0px;
     bottom: 0px;
     left: 0px;
-    background-color: var(--eng-color);
-    /*box-shadow: 1px 0px 5px black;*/
+    background-color: @overlay-color;
     z-index: 20;
     overflow: auto;
 
