--- a/src/modules/image/less/main.less
+++ b/src/modules/image/less/main.less
@@ -8,11 +8,11 @@
 	    /*opacity: 0.2;*/
 	    z-index: @library-z-back;
 	    margin: 3px;
-	    border: 1px solid @ide-fave-color-400;
+	    border: 1px solid var(--eng-color);
 	}
 }
 
-.workspace.image {
+.blanke-window.image {
 	.preview-container {
 		height: 100%;
 
@@ -42,9 +42,9 @@
   			}
 
   			#zoom-controls {
-  				position: fixed;
-			    bottom: 40px;
-			    right: 40px;
+  				position: absolute;
+			    bottom: 20px;
+			    right: 20px;
   			}
 		}
 
