--- a/src/modules/spritesheet/less/main.less
+++ b/src/modules/spritesheet/less/main.less
@@ -17,7 +17,11 @@
     padding: 10px;
 }
 */
-.workspace.spritesheet {
+.blanke-window.spritesheet {
+    .content {
+        overflow: hidden;
+    }
+
     .preview-container {
         .no-select();
 
