--- a/src/plugins/code_editor/less/main.less
+++ b/src/plugins/code_editor/less/main.less
@@ -2,6 +2,12 @@
 
 @eng-background-color: pink;
 
+.blanke-window.code {
+	.content {
+		overflow: hidden;
+	}
+}
+
 #code {
     width: 100%;
     height: 100%;
