--- a/src/less/main.less
+++ b/src/less/main.less
@@ -19,6 +19,11 @@ html {
 	right: 0px;
 	bottom: 0px;
 	-webkit-font-smoothing: none;
+
+	/*border-radius: 5px;*/
+    border: 3px solid var(--eng-color);
+    box-sizing: border-box;
+    transition: border 0.2s ease-in-out;
 }
 
 ::selection {
@@ -26,20 +31,8 @@ html {
 }
 
 body {
-
+	background-color: #424242;
 	display: inline-block;
-
-	.workspace {
-		box-sizing: border-box;
-	    z-index: 20;
-	    display: inline-block;
-	    position: absolute;
-	    top: @titlebar-height;
-	    left: 200px;
-	    right: 0px;
-	    bottom: 0px;
-		background: rgba(255,255,255,0.5);
-	}
 
 	&.not-ready .load-splash {
 		opacity: 1;
@@ -81,6 +74,9 @@ body {
 		position: absolute;
 	    border-radius: 100%;
 		background-color: white;
+		top: 50%;
+		left: 50%;
+    	transform: translate(-50%, -50%); 
 	    
 	    animation-name: loading1;
 	    animation-iteration-count: infinite;
@@ -99,16 +95,12 @@ body {
 
 	@keyframes loading1 {
 	    from {
-	    	width: 0%;
-	       	height: 0%;
-	        top: 50%;
-	        left: 50%;
+	    	width: 0vw;
+	       	height: 0vw;
 	    }
 	    to {
-	    	width: 200%;
-	        height: 200%;
-	        top: -50%;
-	        left: -50%;
+	    	width: 200vw;
+	        height: 200vw;
 	    }
 	}
 }
