--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -22,7 +22,8 @@
     right: 0px;
     z-index: @ide-z-front;
     white-space: nowrap;
-    background-color: white;
+    background-color: @overlay-color;
+    margin: 10px;
 
     .categories {
     	position: relative;
@@ -81,5 +82,50 @@
   		>div {
   			margin: 4px 25px;
   		}
+    }
+}
+.grid {
+    z-index: -100;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-image: url('less/grid.png');
+    background-repeat: repeat;  
+}
+
+.grid-ripple {
+    position: fixed;
+    border: 5px solid white;
+    border-radius: 100%;
+    z-index: -101;
+    transform: translate(-50%, -50%);  
+
+    animation-name: anim_ripple;
+    animation-iteration-count: 1;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes anim_ripple {
+    from {
+        width: 0vw;
+        height: 0vw;
+        opacity: 1;
+    }
+    to {
+        width: 100vw;
+        height: 100vw;
+        opacity: 0;
+    }
+}
+
+.blanke-window {
+    border-color: var(--eng-color);
+    background-color: var(--eng-color);
+
+    >.content {
+        background-color: rgba(255, 255, 255, 0.7);
     }
 }
