--- a/src/plugins/code_editor/less/main.less
+++ b/src/plugins/code_editor/less/main.less
@@ -5,13 +5,13 @@
 .blanke-window.code {
 	.content {
 		overflow: hidden;
-	}
-}
 
-#code {
-    width: 100%;
-    height: 100%;
-    
+		>div {
+			width: 100%;
+			height: 100%;
+		}
+	}
+
     /* font-family: initial !important; */
     box-sizing: border-box; 
 
@@ -19,7 +19,6 @@
 		width: 100%;
 		height: 100%;
 	}
-
 
 	.CodeMirror {
 		border-top: 1px solid black;
