--- a/src/less/library.less
+++ b/src/less/library.less
@@ -17,7 +17,7 @@ body{
 
 	&[project-open="1"] {
 		.library {
-			width: 200px;
+			width: 190px;
 		}
 	}
 }
@@ -30,6 +30,8 @@ body{
     background-color: @overlay-color;
     z-index: 20;
     overflow: auto;
+    padding: @library-padding;
+    box-shadow: @card-shadow;
 
     transition: all ease-in-out 0.2s;
 
@@ -47,7 +49,7 @@ body{
     	.win-drag();
     	.no-select();
     	
-    	margin: 3px;
+    	margin: 0px;
     	white-space: nowrap;
     	z-index: @library-z-front;
 
@@ -106,9 +108,10 @@ body{
 		}
 
 		>.children {
-			width: 100%;
-			padding: 0px;
+			padding: @library-padding;
 			position: absolute;
+			left: 0px;
+			right: 0px;
 			box-sizing: border-box;
 		}
 
