--- a/src/less/titlebar.less
+++ b/src/less/titlebar.less
@@ -13,7 +13,7 @@ body{
 
     &[project-open="1"] {
         .titlebar {
-            left: 200px;
+            left: 205px;
         }
     }
 }
@@ -27,7 +27,7 @@ body{
     right: 0px;
     height: auto;
     padding: 0px;
-    margin: 3px;
+    margin: @library-padding;
     z-index: @ide-z-front;
     
     transition: all ease-in-out 0.2s;
@@ -35,11 +35,25 @@ body{
     button {
         width:@button-width;
         height:@button-height;
+
+        &:hover{
+            .mdi-svg > path {
+                fill: black;
+            }
+        }
+    }
+
+    .ui-btn-group {
+        background-color: transparent;
     }
 
     .mdi-svg {
         width:@svg-width;
         height:@svg-height;
+
+        > path {
+            fill: white;
+        }
     }
 
     .actionbuttons {
