--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -10,6 +10,8 @@
 @library-z-middle: 0;
 @library-z-back: -10;
 
+@library-padding: 5px;
+
 @text-highlight-red: #ffcdd2;
 @text-highlight-green: #c5e1a5;
 @text-highlight-amber: #ffe082;
@@ -20,7 +22,8 @@
 
 @titlebar-height: 38px;
 
-@overlay-color: rgba(255,255,255,0.75);
+@overlay-color: rgba(250,250,250,0.95);
+
 
 :root {
 	--eng-color: white;
