added Effects, sinusoidal movement

--- a/src/less/library.less
+++ b/src/less/library.less
@@ -23,10 +23,11 @@ body{
 }
 
 .library {
-	position: absolute;
+	position: relative;
     top: 0px;
     bottom: 0px;
     left: 0px;
+    height: 100%;
     background-color: @overlay-color;
     z-index: 20;
     overflow: auto;
