--- a/src/less/main.less
+++ b/src/less/main.less
@@ -33,6 +33,7 @@ html {
 body {
 	background-color: #424242;
 	display: inline-block;
+	position: relative;
 
 	&.not-ready .load-splash {
 		opacity: 1;
