--- a/src/main.css
+++ b/src/main.css
@@ -29,6 +29,20 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+*:not(.no-custom-scroll)::-webkit-scrollbar-track {
+  border: 1px solid #BDBDBD;
+  background-color: #E0E0E0;
+}
+*:not(.no-custom-scroll)::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+*:not(.no-custom-scroll)::-webkit-scrollbar * {
+  background: transparent;
+}
+*:not(.no-custom-scroll)::-webkit-scrollbar-thumb {
+  background: #212121 !important;
+}
 /*
     HEADER
 */
@@ -507,6 +521,7 @@ body[project-open="1"] .titlebar {
   -webkit-app-region: no-drag;
   white-space: nowrap;
   display: inline-block;
+  margin-right: 20px;
 }
 .titlebar .actionbuttons button {
   -webkit-touch-callout: none;
@@ -551,7 +566,6 @@ body[project-open="1"] .titlebar {
 .titlebar .gamebuttons {
   -webkit-app-region: no-drag;
   display: inline-block;
-  margin-left: 20px;
 }
 .titlebar .gamebuttons button {
   -webkit-touch-callout: none;
@@ -662,10 +676,11 @@ body[project-open="1"] .library {
   width: 190px;
 }
 .library {
-  position: absolute;
+  position: relative;
   top: 0px;
   bottom: 0px;
   left: 0px;
+  height: 100%;
   background-color: rgba(250, 250, 250, 0.95);
   z-index: 20;
   overflow: auto;
@@ -1276,6 +1291,7 @@ html {
 body {
   background-color: #424242;
   display: inline-block;
+  position: relative;
 }
 body.not-ready .load-splash {
   opacity: 1;
