--- a/src/less/titlebar.less
+++ b/src/less/titlebar.less
@@ -61,6 +61,7 @@ body{
 
         white-space: nowrap;
         display: inline-block;
+        margin-right: 20px;
 
         button {
             .ui-button-sphere();
@@ -71,7 +72,6 @@ body{
         .win-nodrag();
 
         display: inline-block;
-        margin-left: 20px;
 
         button {
             .ui-button-sphere();
