added scene object (wip)

--- a/src/includes/blanke-kit/blanke-ui.less
+++ b/src/includes/blanke-kit/blanke-ui.less
@@ -127,7 +127,7 @@
 }
 
 .ui-select {
-    padding: 5px;
+    padding: 3px;
     border-radius: 5px;
     outline: none;
     border-color: black;
@@ -298,7 +298,7 @@
 }
 
 /* Window CSS */
-@title-bar-height: 20px;
+@title-bar-height: 14px;
 .blanke-window {
     display: none;
     z-index: 100;
@@ -318,6 +318,7 @@
 
         >* {
             .no-select();
+            font-size: 12px;
         }
 
         >.title {
@@ -336,13 +337,12 @@
             border: none;
             outline: none; 
             cursor: pointer;
-            font-size: 17px;
         }
     }
 
     >.content {
         margin-bottom: 0px;
-        overflow: auto;
+        overflow: hidden;
         position: absolute;
         top: @title-bar-height;
         bottom: 0px;
