--- a/src/less/library.less
+++ b/src/less/library.less
@@ -4,6 +4,7 @@
 @lib-svg-width: 14px;
 @lib-svg-height: 14px;
 
+
 body{
 	&[project-open="0"] {
 		.library {
@@ -18,7 +19,7 @@ body{
 
 	&[project-open="1"] {
 		.library {
-			width: 190px;
+			width: @lib-initial-width;
 		}
 	}
 }
