--- a/src/less/titlebar.less
+++ b/src/less/titlebar.less
@@ -13,7 +13,7 @@ body{
 
     &[project-open="1"] {
         .titlebar {
-            left: 205px;
+            left: @titlebar-left;
         }
     }
 }
