--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -23,7 +23,10 @@
 @titlebar-height: 38px;
 
 @overlay-color: rgba(250,250,250,0.95);
+@container-border: 1px solid #e0e0e0;
 
+@lib-initial-width: 150px;
+@titlebar-left: 160px;
 
 :root {
 	--eng-color: white;
