--- a/src/modules/image/less/main.less
+++ b/src/modules/image/less/main.less
@@ -59,6 +59,8 @@
 		.img-settings {
 			padding-left: 10px;
     		box-sizing: border-box;
+    		overflow: auto;
+    		height: 100%;
 
 			.subcategory {
 				.title {
