--- a/src/includes/blanke-kit/blanke-ui.css
+++ b/src/includes/blanke-kit/blanke-ui.css
@@ -174,7 +174,7 @@
   background-color: #e0e0e0;
 }
 .ui-select {
-  padding: 5px;
+  padding: 3px;
   border-radius: 5px;
   outline: none;
   border-color: black;
@@ -396,7 +396,7 @@
 .blanke-window > .title-bar {
   cursor: default;
   background-color: black;
-  height: 20px;
+  height: 14px;
   overflow: hidden;
 }
 .blanke-window > .title-bar > * {
@@ -413,11 +413,12 @@
   user-select: none;
   /* Non-prefixed version, currently
     not supported by any browser */
+  font-size: 12px;
 }
 .blanke-window > .title-bar > .title {
   pointer-events: none;
   color: white;
-  line-height: 20px;
+  line-height: 14px;
   padding-left: 2px;
 }
 .blanke-window > .title-bar > .btn-close {
@@ -429,13 +430,12 @@
   border: none;
   outline: none;
   cursor: pointer;
-  font-size: 17px;
 }
 .blanke-window > .content {
   margin-bottom: 0px;
-  overflow: auto;
+  overflow: hidden;
   position: absolute;
-  top: 20px;
+  top: 14px;
   bottom: 0px;
   right: 0px;
   left: 0px;
