--- a/src/main.css
+++ b/src/main.css
@@ -177,7 +177,7 @@
   background-color: #e0e0e0;
 }
 .ui-select {
-  padding: 5px;
+  padding: 3px;
   border-radius: 5px;
   outline: none;
   border-color: black;
@@ -399,7 +399,7 @@
 .blanke-window > .title-bar {
   cursor: default;
   background-color: black;
-  height: 20px;
+  height: 14px;
   overflow: hidden;
 }
 .blanke-window > .title-bar > * {
@@ -416,11 +416,12 @@
   user-select: none;
   /* Non-prefixed version, currently
     not supported by any browser */
+  font-size: 12px;
 }
 .blanke-window > .title-bar > .title {
   pointer-events: none;
   color: white;
-  line-height: 20px;
+  line-height: 14px;
   padding-left: 2px;
 }
 .blanke-window > .title-bar > .btn-close {
@@ -432,13 +433,12 @@
   border: none;
   outline: none;
   cursor: pointer;
-  font-size: 17px;
 }
 .blanke-window > .content {
   margin-bottom: 0px;
-  overflow: auto;
+  overflow: hidden;
   position: absolute;
-  top: 20px;
+  top: 14px;
   bottom: 0px;
   right: 0px;
   left: 0px;
@@ -474,7 +474,7 @@ body[project-open="0"] .titlebar {
   left: 0px;
 }
 body[project-open="1"] .titlebar {
-  left: 205px;
+  left: 160px;
 }
 .titlebar {
   -webkit-app-region: drag;
@@ -674,7 +674,7 @@ body[project-open="0"] .library .actions {
   display: none;
 }
 body[project-open="1"] .library {
-  width: 190px;
+  width: 150px;
 }
 .library {
   position: relative;
