map_editor: placing/deleting tiles

--- a/src/modules/scene/less/main.less
+++ b/src/modules/scene/less/main.less
@@ -96,6 +96,18 @@
                 		opacity: 0.25;
     				}
     			}
+
+				> .selection {
+					position: absolute;
+					top: 100%;
+					left: 100%;
+					width: 0px;
+					height: 0px;
+					opacity: 0.5;
+					cursor: default;
+					pointer-events: none;
+					background-color: var(--eng-color);
+				}
 			}
 		}
 	}
