map_editor: layers complete

--- a/src/modules/image/less/main.less
+++ b/src/modules/image/less/main.less
@@ -64,13 +64,14 @@
 
 			.subcategory {
 				.title {
+					margin: 10px 0px;
 					font-size: 20px;
 					font-weight: 600;
 				}
 
 				.ui-input-group {
 					margin-left: 20px;
-					margin-bottom: 10px;
+					margin-bottom: 5px;
 				}
 			}
 		}
