--- a/src/modules/scene/less/main.less
+++ b/src/modules/scene/less/main.less
@@ -7,6 +7,14 @@
 		height: 100%;
 	}
 
+	select:not(.ui-select) {
+		border: none;
+		outline: none;
+		background: none;
+		margin-bottom: 5px;
+		width: 100%;
+	}
+
 	> .sidebar {
 		width: 160px;
 		float: left;
@@ -15,8 +23,9 @@
 		z-index: 10;
 
 		> *:not(.ui-resizable-handle) {
+			position: absolute;
+			left: 0px;
 			width: 100%;
-			height: 50%;
 			padding: 5px;
 			box-sizing: border-box;
 			overflow: auto;
@@ -24,19 +33,13 @@
 
 		> .object-container {
 			border-bottom: @container-border;
+			top: 0px;
+			bottom: 30px;
 
-			> select {
-				border: none;
-				outline: none;
-				background: none;
-				margin-bottom: 5px;
-				width: 100%;
-
-				&.in-category {
-					text-transform: uppercase;
-				}
+			> .in-category {
+				text-transform: uppercase;
 			}
-
+		
 			> .obj-settings-container, .obj-preview {
 				display: inline-block;
 				vertical-align: top;
@@ -109,6 +112,60 @@
 					background-color: var(--eng-color);
 				}
 			}
+		}
+
+		> .layer-container {
+			position: absolute;
+			text-align: center;
+			padding: 0px;
+			height: 30px;
+			bottom: 0px;
+
+			> * {
+				position: absolute;
+				height: 100%;
+			    vertical-align: top;
+			    margin: 0px;
+			    padding: 0px;
+
+			}
+
+			.ui-button {
+				padding: 4px;
+			}
+
+			> .group-layer-move {
+				left: 0px;
+			}
+
+			> .group-layer-edit {
+				right: 0px;
+			}
+
+			> .group-layer-move, .group-layer-edit {
+				width: 25px;
+
+				> .ui-button {
+					width: 100%;
+				    margin: 0px;
+				    padding: 0px;
+				    height: 50%;
+				    display: block;
+				    vertical-align: top;
+				}
+			}
+
+			> .in-layer-container {
+				left: 25px;
+				right: 25px;
+
+				> .in-layer {
+					width: 100%;
+				    margin: 0px;
+				    height: 100%;
+				}
+			}
+
 		}
 	}
 
