bugfix: loading >1 plugins

--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -1,7 +1,7 @@
 @import "imports";
 
 .ui-dialog-container {
-    margin-left: 200px;
+    margin-left: @titlebar-left;
     position: absolute;
     top: @titlebar-height;
     bottom: 0px;
