--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -26,7 +26,7 @@
 @container-border: 1px solid #e0e0e0;
 
 @lib-initial-width: 150px;
-@titlebar-left: 160px;
+@titlebar-left: 160px; /* lib-initial-width + 10 */
 
 :root {
 	--eng-color: white;
