--- a/src/includes/blanke-kit/blanke-ui.less
+++ b/src/includes/blanke-kit/blanke-ui.less
@@ -297,6 +297,18 @@
     }
 }
 
+.ui-color {
+    border: none;
+    padding: 0px;
+    outline: 1px solid black;
+    outline-offset: -4px;
+    width: 25px;
+    height: 25px;
+    vertical-align: middle;
+    border-radius: 100%;
+    background: none;
+}
+
 /* Window CSS */
 @title-bar-height: 14px;
 .blanke-window {
