--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,4 @@
+/* lib-initial-width + 10 */
 :root {
   --eng-color: white;
 }
@@ -383,6 +384,17 @@
 .ui-modal button:hover[data-action='no'] {
   background-color: #f44336;
   color: white;
+}
+.ui-color {
+  border: none;
+  padding: 0px;
+  outline: 1px solid black;
+  outline-offset: -4px;
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  border-radius: 100%;
+  background: none;
 }
 /* Window CSS */
 .blanke-window {
@@ -985,7 +997,7 @@ body[project-open="1"] .library {
   cursor: default;
 }
 .ui-dialog-container {
-  margin-left: 200px;
+  margin-left: 160px;
   position: absolute;
   top: 38px;
   bottom: 0px;
