blanke css changes

--- a/src/includes/blanke-kit/blanke-ui.less
+++ b/src/includes/blanke-kit/blanke-ui.less
@@ -93,6 +93,10 @@
     .mdi-svg {
         vertical-align: top;
         text-align: center;
+
+        &*{
+            transition: all ease-in-out 0.2s;
+        }
     }
 }
 
@@ -210,6 +214,10 @@
         box-sizing: border-box;
 
         transition: all ease-in-out 0.2s;
+
+        &*{
+            transition: all ease-in-out 0.2s;
+        }
     }
 
     .mdi-svg {
