--- a/src/includes/blanke-kit/blanke-ui.css
+++ b/src/includes/blanke-kit/blanke-ui.css
@@ -91,6 +91,9 @@
   vertical-align: top;
   text-align: center;
 }
+.ui-button .mdi-svg* {
+  transition: all ease-in-out 0.2s;
+}
 .ui-button-sphere {
   -webkit-touch-callout: none;
   /* iOS Safari */
@@ -127,6 +130,9 @@
 .ui-button-sphere .mdi-svg {
   vertical-align: top;
   text-align: center;
+}
+.ui-button-sphere .mdi-svg* {
+  transition: all ease-in-out 0.2s;
 }
 .ui-button-sphere:hover {
   border-radius: 100%;
@@ -168,6 +174,9 @@
 .ui-button-rect .mdi-svg {
   vertical-align: top;
   text-align: center;
+}
+.ui-button-rect .mdi-svg* {
+  transition: all ease-in-out 0.2s;
 }
 .ui-button-rect:hover {
   border-radius: 4px;
@@ -252,6 +261,10 @@
   box-sizing: border-box;
   transition: all ease-in-out 0.2s;
 }
+.ui-checkbox .mdi*,
+.ui-checkbox .mdi-svg* {
+  transition: all ease-in-out 0.2s;
+}
 .ui-checkbox .mdi-svg {
   vertical-align: top;
   text-align: center;
@@ -317,6 +330,10 @@
   padding: 2px;
   background-color: transparent;
   box-sizing: border-box;
+  transition: all ease-in-out 0.2s;
+}
+.ui-checkbox-label .mdi*,
+.ui-checkbox-label .mdi-svg* {
   transition: all ease-in-out 0.2s;
 }
 .ui-checkbox-label .mdi-svg {
