the return of workspace. scene uses it :)

--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -84,6 +84,15 @@
   		}
     }
 }
+
+#workspace {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+}
+
 .grid {
     z-index: -100;
     position: absolute;
